[webext-adder] Moved adding code in a dedicated function
	This will ease error handling

--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -5,7 +5,8 @@ webext_adder_deps = [
 	dep_sqlite3,
 ]
 webext_adder_srcs = [
-	'main.cpp'
+	'adder.cpp',
+	'main.cpp',
 ]
 
 webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs, install: true, install_dir: get_option('libexecdir'))
