Make Meson generate static libraries by default
	This override the default for subprojects

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,7 @@ project('arcollect', 'cpp',
 	default_options: [
 		'cpp_std=c++17',
 		'cpp_rtti=false',
+		'default_library=static', # For subprojects
 	])
 
 # Options
