--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
       - 'v*'
   
 jobs:
-  test:
+  archlinux-package:
     runs-on: [archlinux]
     steps:
       - uses: actions/checkout@v2
@@ -17,20 +17,11 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: -Dbuildtype=release -Dunity=on -Db_lto=true -Dstrip=true -Denable_webextension=false
           meson-version: 0.57.1
-      - name: Test project
-        uses: BSFishy/meson-build@v1.0.3
+      - uses: actions/upload-artifact@v2
         with:
-          action: test
-          meson-version: 0.57.1
-      - name: Install project
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: install
-          meson-version: 0.57.1
-        env:
-          DESTDIR: "archive-out"
+          name: archlinux-package
+          path: build/packaging
   test-wrapped:
     runs-on: [archlinux]
     steps:
@@ -69,7 +60,7 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: -Dbuildtype=release -Dunity=on -Dstrip=true -Denable_webextension=false
+          setup-options: -Dbuildtype=release -Dunity=on -Dstrip=true -Denable_webextension=false # Find out why to make works -Dlto=true
           meson-version: 0.57.1
         env:
           CC:  clang
@@ -161,6 +152,11 @@ jobs:
         with:
           name: web-ext-artifacts
           path: web-ext-artifacts
+      - name: Download AMO signed webextension
+        uses: actions/download-artifact@v2.0.9
+        with:
+          name: archlinux-package
+          path: archlinux-package
       - name: Draft release body # TODO Also autogenerate title
         run: git log --format=%B -n 1 "${{ github.ref }}" | tail -n +3 | cut -f 2- > release.body
       - name: Release on GitHub
@@ -170,5 +166,7 @@ jobs:
           body_path: release.body
           files: |
             web-ext-artifacts/*
+            archlinux-package/PKGBUILD
+            archlinux-package/arcollect-*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
