--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
-option('make_packaging_for', type: 'array', choices: ['pacman'], value: [], description: 'Generate distro packages.')
+option('make_packaging_for', type: 'array', choices: ['pacman'], value: [], description: 'Generate distro packages. THIS DISABLE NORMAL BUILD.')
 option('enable_webextension', type: 'boolean', value: true, description: 'Build the webextension.')
 option('enable_native_progs', type: 'boolean', value: true, description: 'Build C++ code (desktop-app, webext-adder, ...). It is used and set to false in the webextension CI.')
