--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           action: build
           meson-version: 0.57.1
+          setup-options: -Dmake_packaging_for=pacman
       - uses: actions/upload-artifact@v2
         with:
           name: archlinux-package
@@ -107,7 +108,7 @@ jobs:
           DESTDIR: "archive-out"
   build-webextension:
     # Simply build the webextension (only)
-    needs: [test, test-wrapped, test-ubuntu-20_04, test-ubuntu-18_04]
+    needs: [archlinux-package, test-wrapped, test-ubuntu-20_04, test-ubuntu-18_04]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -158,7 +159,8 @@ jobs:
           name: archlinux-package
           path: archlinux-package
       - name: Draft release body # TODO Also autogenerate title
-        run: git log --format=%B -n 1 "${{ github.ref }}" | tail -n +3 | cut -f 2- > release.body
+        run: git log --format=%B -n 1 | tail -n +3 | cut -f 2- > release.body
+        shell: bash
       - name: Release on GitHub
         uses: softprops/action-gh-release@v1
         with:
