--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,14 @@ jobs:
     runs-on: [archlinux]
     steps:
       - uses: actions/checkout@v2
-      - name: Build project
+      - name: Configure project
         uses: BSFishy/meson-build@v1.0.3
         with:
-          action: build
+          action: setup
           meson-version: 0.57.1
-          setup-options: -Dmake_packaging_for=pacman
+      - name: Generate package (makepkg -p PKGBUILD.local)
+        run: makepkg -p PKGBUILD.local -c CFLAGS= CXXFLAGS= LDFLAGS= PKGEXT=".pkg.tar.zst"
+        working-directory: build/packaging
       - uses: actions/upload-artifact@v2
         with:
           name: archlinux-package
@@ -148,12 +150,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [sign-amo]
     steps:
+      - uses: actions/checkout@v2
       - name: Download AMO signed webextension
         uses: actions/download-artifact@v2.0.9
         with:
           name: web-ext-artifacts
           path: web-ext-artifacts
-      - name: Download AMO signed webextension
+      - name: Download ArchLinux package
         uses: actions/download-artifact@v2.0.9
         with:
           name: archlinux-package
