[Debian packaging] Put package in 'graphics' section

--- a/packaging/control.in
+++ b/packaging/control.in
@@ -3,6 +3,7 @@ Version: @ARCOLLECT_VERSION@-1
 Architecture: @DEB_HOST_ARCH@
 Maintainer: DevilishSpirits (aka D-Spirits or Luc B.) <devilishspirits@gmail.com>
 Priority: optional
+Section: graphics
 Homepage: @ARCOLLECT_WEBSITE@
 Description: Artwork manager
  An artwork manager.
