[github-actions] Enabled master junk push safeguard
	Things that don't pass CI won't get into master easily right-now.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -201,7 +201,7 @@ jobs:
       - name: Compare build and build-ubuntu-20_04 results
         run: diff -ry build build-ubuntu-20_04
   merge-to-master:
-    #needs: [check-webextensions-same]
+    needs: [check-webextensions-same]
     runs-on: [ubuntu-latest]
     if: ${{ (github.event_name == 'push') && (github.ref == 'refs/heads/master-staging') }}
     steps:
