--- a/packaging/control.in
+++ b/packaging/control.in
@@ -4,6 +4,25 @@ Architecture: @DEB_HOST_ARCH@
 Maintainer: DevilishSpirits (aka D-Spirits or Luc B.) <devilishspirits@gmail.com>
 Priority: optional
 Section: graphics
+Depends: @DEB_CONTROL_DEPENDS@
 Homepage: @ARCOLLECT_WEBSITE@
-Description: Artwork manager
- An artwork manager.
+Description: Your personal visual artwork library
+ If you like visual arts, you may want to save some artworks you find on the
+ net. Right-click and save picture works but is not very convenient, forget the
+ artwork source and classification is complicated.
+ .
+ This personal project aim to fulfill needs of artwork collection management and
+ to ease it's creation, browsing and growth that you do in a few clicks thanks
+ to the web-extension which put a save button on artwork pages. Metadata are
+ also saved like the source, account, tags and the rating.
+ .
+ Note that it's goal is to provide an easy way to browse your saved artworks.
+ It will not help you to discover new artworks or make any recommendations, it's
+ outside his scope. In fact, there is no mention of any platforms excluding if
+ you use it or checkout the list of supported platforms and (trust me) it's
+ better this way.
+ .
+ Under the hood, the application is powered with C++17 by the SDL2 and SQLite3
+ for metadata storage.
+ .
+ This application respect your privacy and will never judge you.
